[develop] Mise en place de glyphicon-plus

--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -67,7 +67,7 @@
                                     <input type="text" class="form-control" id="topic" name="topic" v-model="nameTheme"
                                            @focus="msgname = false; confirmTopic = false; isNewTopic = true;"
                                            @blur="messageName" placeholder="Thème" maxlength="50">
-                                    <span class="glyphicon glyphicon-floppy-save form-control-feedback"
+                                    <span class="glyphicon glyphicon-plus form-control-feedback"
                                           @click="verifyTopicForm"style="margin-top: 20px;"></span>
                                 </div>
                             </form>
