[develop] Ajout du scroll avec la souris

--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -107,7 +107,7 @@
             <div class="col-sm-12 col-md-10 col-lg-7">
                 <div class="row">
                     <div class="col-lg-7 col-md-7 text-center">
-                        <legend>Formation ajoutées</legend>
+                        <legend>Formations ajoutées</legend>
                     </div>
                 </div>
                 <div style="width: 100%; height: 360px; overflow-y:hidden; overflow-x:hidden; border: 1px solid;" id="test">
