--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -28,16 +28,15 @@
                             <div class="form-group" :class="{'has-error':!isTrainingTitleValid }">
                                 <label for="formation" class="label-control">Formation</label><br/><br/>
                                 <input type="text" class="form-control" id="formation" name="formation" v-model="trainingTitle"
-                                       @focus="msgtrainingTitle = false; confirmFormation = false; isNewTrainingTitle = true;"
-                                       @blur="messageTrainingTitle" placeholder="Formation" maxlength="20">
+                                       @focus="msgtrainingTitle = false; confirmFormation = false; isNewTrainingTitle = true;msgname=false;"
+                                        placeholder="Formation" maxlength="20">
                             </div>
                         </td>
                         <td width="15%">
                             <div class="form-group">
                                 <label>1/2 journées</label><br/><br/>
                                 <select class="form-control" v-model="numberHalfDays"
-                                        @focus="msgnumberHalfDays = false; confirmFormation = false; isNewTrainingTitle = true;"
-                                        @blur="messageNumberHalfDays">
+                                        @focus="msgnumberHalfDays = false; confirmFormation = false; isNewTrainingTitle = true;msgname=false;">
                                     <option v-for="n in 200">{{n}}</option>
                                 </select>
                             </div>
@@ -46,8 +45,7 @@
                             <div class="form-group">
                                 <label>Thèmes</label><br/><br/>
                                 <select class="form-control" v-model="topicDescription"
-                                        @focus="msgtopic = false; confirmFormation = false; isNewTrainingTitle = true;"
-                                        @blur="messageTopic">
+                                        @focus="msgtopic = false; confirmFormation = false; isNewTrainingTitle = true;msgname=false;">
                                     <option v-for="option in optionsTopic" :value="option">{{ option.name }}
                                     </option>
                                 </select>
@@ -58,17 +56,15 @@
                                 <label></label><br/><br/>
                                 <input type="submit" class="btn btn-default" value="Valider" style="width:80%"/>
                             </div>
-
                         </td>
                         <td width="30%" class="td-right">
                             <form>
                                 <div class=" form-group has-feedback" :class="{'has-error':  !isNameThemeValid  } ">
                                     <label class="label-control" for="topic">Nouveau thème</label><br/><br/>
                                     <input type="text" class="form-control" id="topic" name="topic" v-model="nameTheme"
-                                           @focus="msgname = false; confirmTopic = false; isNewTopic = true;"
-                                           @blur="messageName" placeholder="Thème" maxlength="50">
-                                    <span class="glyphicon glyphicon-plus form-control-feedback"
-                                          @click="verifyTopicForm"style="margin-top: 20px;"></span>
+                                           @focus="msgname = false; confirmTopic = false; isNewTopic = true;msgtrainingTitle = false;msgnumberHalfDays = false;msgtopic = false;"
+                                            placeholder="Thème" maxlength="50">
+                                    <span class="glyphicon glyphicon-plus form-control-feedback" @click="verifyTopicForm"style="margin-top: 20px;"></span>
                                 </div>
                             </form>
                         </td>
@@ -81,17 +77,14 @@
                                           class="text-center color-red ">Veuillez remplir tous les champs.</span>
                                     <span v-show="confirmFormation && isNewTrainingTitle && !(msgtrainingTitle || msgnumberHalfDays || msgtopic)"
                                           class="text-center color-green " >La formation a été créée avec succès.</span>
-                                    <span v-show=" !isTrainingTitleValid && !(msgtrainingTitle || msgnumberHalfDays || msgtopic)"
-                                           class="color-red">{{trainingTitleMsg}}</span>
+                                    <span v-show=" !isTrainingTitleValid && !(msgtrainingTitle || msgnumberHalfDays || msgtopic)"  class="color-red">{{trainingTitleMsg}}</span>
                                 </div>
                             </td>
                             <td class="text-center td-right" style="height: 60px;">
                                 <div>
-                                    <span v-show="msgname"
-                                           class="text-center color-red ">Veuillez remplir le champ.</span>
+                                    <span v-show="msgname" class="text-center color-red ">Veuillez remplir le champ.</span>
                                     <span v-show="!isNewTopic" class="text-center color-red ">Un thème identique existe déjà.</span>
-                                    <span v-show="confirmTopic && isNewTopic && !msgname"
-                                          class="text-center color-green ">Le nouveau thème a été ajouté avec succès.</span>
+                                    <span v-show="confirmTopic && isNewTopic && !msgname"class="text-center color-green ">Le nouveau thème a été ajouté avec succès.</span>
                                     <span v-show="!isNameThemeValid" class="color-red">{{ nameThemeMsg }}</span>
                                 </div>
                             </td>
