--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -111,7 +111,7 @@
                                 </div>
                                 <div class="form-group">
                                     <div class="row">
-                                        <div class="col-xs-12 col-xm-12 col-md-6 cold-lg-6 col-lg-offset-3 col-md-offset-3">
+                                        <div class="col-xs-12 col-xm-12 col-md-12 cold-lg-12 ">
                                             <button type="submit" name="register-submit" id="register-submit"
                                                     tabindex="4" class="form-control btn btn-primary">S'inscrire
                                             </button>
