--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -15,8 +15,8 @@
 <body>
 <div id="TrainingTopic" v-cloak>
 
-    <bandeau></bandeau>
-    <addformation></addformation>
+    <blue-header></blue-header>
+    <add-formation-panel></add-formation-panel>
 
 
     <!--   <div class="container-fluid" id="addFormation">
@@ -32,11 +32,11 @@
                    </div>
 
                    <div style="width: 100%; height: 360px; overflow-y:hidden; border: 1px solid;" id="test">
-                       <img v-show="!isEmptyFormation()" src="css/up.png" id="scroll-up" width="20" height="20" style="position: absolute; left:50%; z-index:1;">
+                       <img v-show="!showChevrons()" src="css/up.png" id="scroll-up" width="20" height="20" style="position: absolute; left:50%; z-index:1;">
                        <table class="fix tabnonborder" >
                            <tbody>
                            <tr>
-                               <td v-show="isEmptyFormation()" >Aucune formation n'a été créé.</td>
+                               <td v-show="showChevrons()" >Aucune formation n'a été créé.</td>
                                <td>
                                    <template v-for="grandgroup in allTopicTraining">
                                        <table class="table table-borderless tabnonborder fix">
@@ -68,7 +68,7 @@
                            </tr>
                            </tbody>
                        </table>
-                       <img v-show="!isEmptyFormation()" src="css/down.png" id="scroll-down" width="20" height="20" style="position: absolute; left:50%; top:95%; z-index:1;">
+                       <img v-show="!showChevrons()" src="css/down.png" id="scroll-down" width="20" height="20" style="position: absolute; left:50%; top:95%; z-index:1;">
                    </div>
                </div>
            </div>&lt;!&ndash;Fin row 2&ndash;&gt;
