--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Enregistrement collaborateur</title>
+    <script type="text/javascript" src="lib/jquery-3.2.0.min.js"></script>
+
     <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/signInSignUp.css">
+    <link rel="stylesheet" href="css/animate.css">
     <script src="lib/vue.js"></script>
     <script src="lib/vue-resource.js"></script>
+    <script>
+
+    </script>
 </head>
 <body>
+
 <div class="container-fluid" id="app" v-cloak>
     <div class="row">
         <div class="col-md-12" style="padding:40px;background-color:#428bca;margin-bottom: 30px;"></div>
@@ -18,5 +26,6 @@
     </div>
 </div>
 <script src="app/controller/registerCollaborator.js"></script>
+
 </body>
 </html>
