[US#GF16] Ajout dropdowns

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Enregistrement collaborateur</title>
+    <script src="lib/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/signInSignUp.css">
     <link rel="stylesheet" href="css/main.css">
