[develop] Ajout du Token #1

--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/addTrainingTopic.css">
     <script src="lib/vue.js"></script>
     <script src="lib/vue-resource.js"></script>
-    <script src="lib/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/jquery.min.js"></script>
+    <script src="lib/jwt-decode.js"></script>
     <title>Gestion Formation</title>
 </head>
 <body>
