--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/signInSignUp.css">
     <script src="lib/vue.js"></script>
     <script src="lib/vue-resource.js"></script>
+    <script src="lib/jwt-decode.js"></script>
 </head>
 <body>
 <div class="container-fluid" id="newVue" v-cloak>
