[US#GF5] Adaptation BDD Version 1

--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -16,6 +16,7 @@
     <blue-header></blue-header>
     <add-formation-panel></add-formation-panel>
     <show-formation-panel></show-formation-panel>
+    <declaration-session></declaration-session>
 </div>
 <script src="app/controller/scroll.js"></script>
 <script src="app/controller/registerTrainingTopic.js"></script>
