[US#GF5]  Template add session

--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -14,8 +14,12 @@
 <body>
 <div id="newVue" v-cloak>
     <blue-header></blue-header>
+<!--
     <add-formation-panel></add-formation-panel>
     <show-formation-panel></show-formation-panel>
+-->
+    <add-session-panel></add-session-panel>
+
 </div>
 <script src="app/controller/scroll.js"></script>
 <script src="app/controller/registerTrainingTopic.js"></script>
