[US#GF6] Création du composant de l'affectation d'un collaborateur (a droite :Template). Correction des composants de la dernière version (à gauche: grille Bootstrap)

--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/addTrainingTopic.css">
     <link rel="stylesheet" href="css/assignCollaborator.css">
     <script src="lib/vue.js"></script>
+    <script src="lib/vue-strap.js"></script>
+
     <script src="lib/vue-resource.js"></script>
     <script type="text/javascript" src="lib/jquery.min.js"></script>
     <script src="lib/jwt-decode.js"></script>
